title: only include the date in draft mode

--- a/preamble.tex
+++ b/preamble.tex
@@ -33,6 +33,7 @@
 \usepackage{fontspec}
 \usepackage{graphicx}
 \usepackage[all]{hypcap}
+\usepackage{ifdraft}
 \usepackage{ifthen}
 % \usepackage{lastpage}
 \usepackage[final]{listings}
