--- a/title.tex
+++ b/title.tex
@@ -45,8 +45,7 @@
 \noindent\hspace*{\centeroffset}\makebox[0pt][l]{
 \begin{minipage}{\textwidth}
     \centering
-    \today
-%    \textcolor{White}{\today}
+    \ifdraft{\today}{\textcolor{White}{\today}}
 \end{minipage}}
 
 \vspace{6ex}
