inside cover wibble

--- a/sections/i-disclaimer.tex
+++ b/sections/i-disclaimer.tex
@@ -7,9 +7,7 @@
 \noindent\makebox[0pt][l]{\begin{minipage}{\textwidth}
 \flushleft
 \begin{small}
-    Cover art: Rost, Randi~J., 1960--\\
-    OpenGL Shading Language / Randi J. Rost; with contributions from 
-    John M.~Kessenich \ldots\ [et al.]. --- 2nd ed.
+    Cover art: Rost, Randi~J., OpenGL Shading Language, 2nd ed.\\
     (ISBN 0-321-33489-2)
 
     \vspace{4ex}
@@ -17,6 +15,6 @@
 %    \emph{\project} copyright \copyright\ 2009, Trevor L. McDonell\\
 %    Original Author: Trevor L. McDonell (trevor.mcdonell@gmail.com)
 
-    Copyright \copyright\ 2009--2012, Trevor L.\ McDonell
+    Copyright \copyright\ 2009--2014, Trevor L.\ McDonell
 \end{small}
 \end{minipage}}
