--- a/sections/ii-declaration.tex
+++ b/sections/ii-declaration.tex
@@ -9,7 +9,12 @@
     This thesis is submitted in partial fulfilment\\
     of the requirements for the degree of\\[3ex]
 
-    \textsc{\ldots}\\[1.5ex]
+    \textsc{\large Doctor of Philosophy}\\[3ex]
+
+    School of Computer Science and Engineering\\
+    %Faculty of Engineering\\[1.5ex]
+    The University of New South Wales\\
+    Australia
 
 %    \textsc{\large Bachelor of Engineering (Mechatronics (Space))}\\[1.5ex]
 %    \textsc{\large Bachelor of Engineering (Mechatronics / Space Engineering)}\\[1.5ex]
@@ -27,17 +32,20 @@
 
 \cleardoublepage
 \vspace*{1in}
-\noindent\makebox[0pt][l]{\begin{minipage}{\textwidth}
-    \centering
-    I hereby declare that this submission contains my own work,\\
-    and includes no material which to a substantial extent has been 
-    performed by others,\\
-    except where otherwise acknowledged.
-\end{minipage}}
+\noindent I hereby declare that this submission is my own work and to the best
+of my knowledge it contains no materials previously published or written by
+another person, or substantial proportions of material which have been accepted
+for the award of any other degree or diploma at UNSW or any other educational
+institution, except where due acknowledgement is made in the thesis. Any
+contribution made to the research by others, with whom I have worked at UNSW or
+elsewhere, is explicitly acknowledged in the thesis. I also declare that the
+intellectual content of this thesis is the product of my own work, except to the
+extent that assistance from others in the project's design and conception or in
+style, presentation and linguistic expression is acknowledged.
 
 \vspace{1in}
 \noindent\makebox[0pt][l]{\begin{minipage}{\textwidth}
     \centering
-    \hfill{} \textsc{trevor l. mcdonell} \hfill{} \textsc{date} \hfill{}
+    \hfill{} \textsc{trevor lee mcdonell} \hfill{} \textsc{date} \hfill{}
 \end{minipage}}
 
