--- a/sections/iii-abstract.tex
+++ b/sections/iii-abstract.tex
@@ -23,8 +23,12 @@ computations executed on graphics processing units. The design concentrates on
 providing a high--level abstraction that composes computations that run
 efficiently according to the strengths and weaknesses of the underlying
 hardware, without forcing the programmer to recast their algorithm to fit within
-the architecture.
+that architecture.
 
-The final design \ldots\ and benchmarking shows that the goals of the design were
-\ldots
+The main contribution of this thesis is an embedded language \emph{Accelerate},
+which is more expressive than previous languages targeting general purpose
+computations on graphics processors, while benchmarks show that programs in
+Accelerate can be competitive with those written in traditional lower-level
+languages. Through the work done in this thesis, Accelerate has become the
+dominant method for GPGPU programming in Haskell.
 
