--- a/sections/03-design.tex
+++ b/sections/03-design.tex
@@ -841,6 +841,22 @@ the number of possible runtime errors in type-correct programs.
 
 \section{Discussion}
 
+This chapter has outlined the basic concepts driving the design and
+implementation of our embedded language Accelerate. We have introduced the
+concept of data parallelism, a programming model that is simple to reason about
+yet can efficiently make use of large numbers of processors. We introduced the
+idea of using graphics processors for general purpose computing tasks, and show
+that GPU computing, and CUDA in particular, are data-parallel programming
+models. Finally, we have introduced the idea of embedded domain-specific
+languages and runtime code generation as a way to make use of GPUs from a
+high-level language, before outlining the design of our embedded language of
+parameterised, data-parallel array operations.
+
+The next chapter covers the implementation of the Accelerate language, such as
+skeleton-based code generation and subsequent execution on GPUs. We also cover
+issues such as caching, which must be considered in order to ensure that the
+embedded language retains performance competitive to traditional offline
+compiled languages.
 
 
 % MMTC: Chapter 2 (Background): Don't bother introducing Haskell and things like
